# teamup

./: .gitmodules  CMakeLists.txt  build.sh
docs/: notes
files/dev/: logging.conf
global/bandit/: main.cpp
modules/teamup/main/: entry.cpp  entry.h  main.cpp
modules/teamup/main/flux/: action.cpp  action.h  dispatcher.cpp  dispatcher.h  stores.cpp  stores.h
modules/teamup/main/log/: logaction.cpp  logaction.h  logstore.cpp  logstore.h
modules/teamup/main/noise/: perlin.cpp  perlin.h
modules/teamup/main/ui/: ui.cpp  ui.h  window_bounds.cpp  window_bounds.h  window_renderer.h
modules/teamup/main/ui/curses/: curses.cpp  curses.h  ui.cpp  window.cpp  window.h  window_bounds.cpp  window_bounds.h  window_renderer.h
modules/teamup/main/ui/windows/: log.cpp  log.h
modules/teamup/main/world/generator/: generator.cpp  generator.h  heightmap.cpp  heightmap.h  noise_generator.cpp  perlin_generator.cpp
modules/teamup/test/: colours.cpp  heightmapPng.cpp  png.cpp  screenshot.cpp  test.cpp
teamup/main/: main.cpp
teamup/test/: test.cpp
